better structure set with transparent header.

--- a/perfect-picture.css
+++ b/perfect-picture.css
@@ -1,11 +1,39 @@
 body{
-    background-image: url(images/perfect-picture-movie.jpg);
+    /* background-image: url(images/bottom-third.jpg); */
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center bottom;
+    position: relative;
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
+.title-poster {
+    width: 100%;
+}
+
+.content {
+    /* background-image: url(images/perfect-picture-movie.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 60vh;
+    top: 0;
+    width: 100%; */
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: max-content;
+    grid-gap: 3%;
+    -webkit-transition: all .25s ease;
+    -moz-transition: all .25s ease;
+    -ms-transition: all .25s ease;
+    -o-transition: all .25s ease;
+    transition: all .25s ease;
 }
 
 .image-frame {
-
+    
 }
 
 form {
