--- a/perfect-picture.css
+++ b/perfect-picture.css
@@ -1,5 +1,5 @@
 body{
-    /* background-image: url(images/bottom-third.jpg); */
+    background-image: url(images/bottom-third.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center bottom;
