--- a/perfect-picture.css
+++ b/perfect-picture.css
@@ -57,7 +57,7 @@ form {
 
 @media(max-width:700px){
     body{
-        background-image: url(images/bottom-third-1000.jpg);
+        background-image: url(images/bottom-third-700.jpg);
     }
 
     .title-poster{
@@ -67,5 +67,11 @@ form {
     .title-poster-700{
         display: block;
         width: 100%;
+    }
+}
+
+@media(max-width:560px){
+    body {
+        background-image: url(images/bottom-third-560.jpg);
     }
 }
