--- a/perfect-picture.css
+++ b/perfect-picture.css
@@ -8,6 +8,10 @@ body{
     padding: 0;
     border: 0;
     min-height: 100vh;
+    font-size: 18px;
+    font-family: "Questrial";
+    /* font-family: Helvetica, Arial, sans-serif; */
+    color: #282564;
 }
 
 .title-poster {
@@ -44,9 +48,42 @@ body{
     margin-bottom: 50px;
 }
 
+h2 {
+    font-size: 2.5em;
+    font-weight: 400;
+    padding: 15px;
+}
+
 form {
     display: block;
     /* float: right; */
+    margin-top: 80px;
+}
+
+label {
+    display: block;
+}
+
+input {
+    outline: 0;
+    border: none;
+    border-radius: 5px;
+    font-size: 20px;
+    padding: 5px;
+    margin-top: 10px;
+    font-family: "Questrial";
+}
+
+button {
+    font-size: 23px;
+    border-radius: 5px;
+    display: block;
+    margin-top: 10px;
+    border: none;
+    color: white;
+    background: #282564;
+    font-family: "Questrial";
+    padding: 4px 9px;
 }
 
 @media(max-width:1000px){
