--- a/perfect-picture.css
+++ b/perfect-picture.css
@@ -41,7 +41,7 @@ h2 {
 
 form {
     display: block;
-    margin-top: 50px;
+    margin-top: 40px;
     padding: 5%;
     text-align: center;
 }
@@ -114,7 +114,7 @@ button:hover{
         width: 100%;
     }
 
-    h2, form{
+    h2, form, input{
         text-align: center;
     }
 }
