--- a/perfect-picture.css
+++ b/perfect-picture.css
@@ -28,7 +28,7 @@ body{
 .title-frame {
     float: left;
     width: calc(50% - 40px);
-    max-height: 280px;
+    height: 320px;
     margin-bottom: 80px;
     margin-right: 40px;
 }
@@ -103,6 +103,8 @@ button:hover{
         float: none;
         display: block;
         margin: 0 auto;
+        width: 80%;
+        margin-left: calc(3% + 20px);
     }
 
     .title-poster{
