--- a/perfect-picture.css
+++ b/perfect-picture.css
@@ -12,6 +12,39 @@ body{
     color: #282564;
 }
 
+a {
+    text-decoration: none;
+    color: #333;
+    -webkit-transition: all .25s ease;
+       -moz-transition: all .25s ease;
+        -ms-transition: all .25s ease;
+         -o-transition: all .25s ease;
+            transition: all .25s ease;
+}
+
+nav {
+    background: transparent;
+}
+
+.nav-list {
+    list-style: none;
+    text-align: center;
+}
+
+.nav-item {
+    display: inline;
+    text-transform: uppercase;
+    color: #333;
+    text-decoration: none;
+    font-weight: 700;
+    margin: 0 7.5px;
+    padding: 0 2.5px;
+}
+
+.nav-item:hover{
+    color: #A40A49;
+}
+
 .title-poster {
     width: 100%;
 }
