--- a/perfect-picture.css
+++ b/perfect-picture.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body{
     background-image: url(images/bottom-third.jpg);
     background-size: cover;
@@ -10,7 +14,6 @@ body{
     font-size: 18px;
     font-family: "Questrial", sans-serif;
     color: #282564;
-    scroll-behavior: auto;
 }
 
 a {
