--- a/perfect-picture.css
+++ b/perfect-picture.css
@@ -16,6 +16,12 @@ body{
     color: #282564;
 }
 
+.container {
+    max-width: 1080px;
+    margin: 0 auto;
+    padding: 35px 4%;
+}
+
 a {
     text-decoration: none;
     color: #333;
@@ -24,6 +30,10 @@ a {
         -ms-transition: all .25s ease;
          -o-transition: all .25s ease;
             transition: all .25s ease;
+}
+
+p {
+    line-height: 1.5;
 }
 
 nav {
@@ -74,6 +84,29 @@ h2 {
     font-size: 2.5em;
     font-weight: 400;
     padding: 15px 0;
+}
+
+.section-header {
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.embed-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+}
+
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 form {
