--- a/perfect-picture.css
+++ b/perfect-picture.css
@@ -3,7 +3,7 @@ html {
 }
 
 body{
-    background-image: url(images/bottom-third.jpg);
+    /* background-image: url(images/bottom-third.jpg); */
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom center;
