--- a/perfect-picture.css
+++ b/perfect-picture.css
@@ -89,6 +89,7 @@ h2 {
 
 section {
     background-size: cover;
+    background-position: center center;
     min-height: 500px;
     margin: 0;
     padding: 20px 0;
