--- a/perfect-picture.css
+++ b/perfect-picture.css
@@ -102,10 +102,6 @@ section {
     font-weight: 700;
 }
 
-#showtimes {
-    color: #fff;
-}
-
 .s-synopsis {
     background-image: url(images/jackie.jpg);
 }
@@ -134,6 +130,15 @@ section {
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+#showtimes {
+    color: #fff;
+}
+
+.showtimes-container {
+    background: rgba(255, 255, 255, 0.7);
+    margin: 0 4%;
 }
 
 form {
