--- a/perfect-picture.css
+++ b/perfect-picture.css
@@ -138,7 +138,8 @@ section {
 
 .showtimes-container {
     background: rgba(255, 255, 255, 0.7);
-    margin: 0 4%;
+    margin: 0 12.5%;
+    padding: 50px;
 }
 
 form {
