--- a/perfect-picture.css
+++ b/perfect-picture.css
@@ -1,16 +1,12 @@
 html {
     scroll-behavior: smooth;
+    box-sizing: border-box;
 }
 
 body{
-    /* background-image: url(images/bottom-third.jpg); */
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: bottom center;
     margin: 0;
     padding: 0;
     border: 0;
-    min-height: 100vh;
     font-size: 18px;
     font-family: "Questrial", sans-serif;
     color: #282564;
