--- a/perfect-picture.css
+++ b/perfect-picture.css
@@ -10,6 +10,7 @@ body{
     font-size: 18px;
     font-family: "Questrial", sans-serif;
     color: #282564;
+    background: green;
 }
 
 .container {
@@ -61,6 +62,7 @@ nav {
 
 .title-poster {
     width: 100%;
+    display: block;
 }
 
 .title-poster-700 {
