narrower pad on mobile.

--- a/perfect-picture.css
+++ b/perfect-picture.css
@@ -242,7 +242,7 @@ button:hover{
 
     .showtimes-container {
         margin: 0 4%;
-        padding: 35px 4%;
+        padding: 5px 4% 25px;
     }
 }
 
